<resources>
    <string name="app_name">CRM AUNA</string>
    <string name="title_option_setinicio">Agenda</string>
    <string name="title_option_setrutas">Agenda</string>
    <string name="title_option_setclientes">Prospectos</string>
    <string name="title_option_setpedido">Transacciones</string>
    <string name="title_option_setreuniones">Reuniones</string>
    <string name="title_option_setrecordatorios">Recordatorios</string>
    <string name="title_option_recorrido">Mi Recorrido</string>
    <string name="title_option_setsincronizar">Sincronizar</string>
    <string name="title_option_radar">Radar</string>
    <string name="title_option_informacion">Información</string>
    <string name="title_option_setajustes">Ajustes</string>
    <string name="title_option_setcerrar_sesion">Cerrar Sesión</string>
    <string name="title_option_setconfiguracion">CONFIGURACIÓN</string>
    <string name="test_money_value">$100.00</string>
    <string name="test_transaction_type">Factura</string>
    <string name="test_client_name">Nombre Prueba</string>
    <string name="test_product_name">Producto de Prueba</string>
    <string name="test_number_value">100.00</string>
    <string name="test_order_name">Por nombre</string>
    <string name="test_order_last_name">Por Apellido</string>
    <string name="test_order_date">Por fecha</string>
    <string name="test_telefono">042823867</string>
    <string name="test_null"></string>
    <string name="label_total">Total</string>
    <string name="label_discount">Descuento</string>
    <string name="label_tax">Impuesto</string>
    <string name="label_taxes">Impuestos</string>
    <string name="label_detail">Detalle</string>
    <string name="label_subtotal">Subtotal</string>
    <string name="string_client_token">########</string>
    <string name="label_correo">Correo</string>
    <string name="label_direcciones">Direcciones</string>
    <string name="label_fecha_nacimiento">Fecha Nacimiento</string>
    <string name="label_estado_civil">Estado Civil</string>
    <string name="label_referencia">Referencia</string>
    <string name="label_telefono_1">Móvil</string>
    <string name="label_telefono_2">Fijo</string>
    <string name="label_geo_posicion">Geo - Pos</string>
    <string name="label_datos_personales">Datos Personales</string>
    <string name="label_datos_contacto">Direcciones</string>
    <string name="label_datos_personas">Contactos</string>
    <string name="label_direccion">Dirección</string>
    <string name="label_ciudad">Ciudad</string>
    <string name="hint_search_transaction">Buscar</string>
    <string name="hint_search_transaction_rutas">Buscar</string>
    <string name="title_activity_searchable">Búsqueda</string>
    <string name="label_recordarme">Recordarme</string>
    <string name="label_registtrarse">Registrarse</string>
    <string name="label_olvido_clave">¿Olvidó su contraseña?</string>
    <string name="label_tareas">Tareas</string>
    <string name="label_button_info">Info</string>
    <string name="label_button_direcciones">Dirección</string>
    <string name="label_button_contactos">Contacto</string>
    <string name="label_button_cancelar">Cancelar</string>
    <string name="label_button_iniciar">Iniciar Gestión</string>
    <string name="label_button_fin">Finalizar</string>
    <string name="label_button_aceptar_act">Aceptar</string>
    <string name="label_button_cancelar_act">Cancelar</string>
    <string name="menu_toggle_contactos">Ver Contactos</string>
    <string name="loading">Cargando...</string>
    <string name="label_contacto">Contacto:</string>
    <string name="label_button_modificar_gestion">Modificar Gestión</string>
    <string name="menu_reprogramar_agenda">Reprogramar Agenda</string>
    <string name="label_desde">Desde:</string>
    <string name="label_hasta">Hasta:</string>
    <string name="label_cliente">Prospecto</string>
    <string name="label_crear_visita">Agendar Visita</string>
    <string name="label_proxima_visita">Próxima Visita</string>
    <string name="label_ver_agentes">Ver Agentes</string>
    <string name="label_ver_rutas">Ver Rutas</string>
    <string name="label_conf_tareas">Agregar Tareas</string>
    <string name="label_menu_ver_rutas">Ver Rutas</string>
    <string name="label_menu_ver_posicion">Mostrar Ubicación</string>
    <string name="label_menu_como_llegar">Como Llegar</string>
    <string name="label_rutas_por_fecha">Ruta</string>
    <string name="label_como_llegar">Como Llegar</string>
    <string name="label_posicion">Ubicación</string>
    <string name="abreviatura_visitado">Visitado</string>
    <string name="abreviatura_no_visitado">No Venta</string>
    <string name="abreviatura_pendiente">Próximo</string>
    <string name="label_efectividad">Efectividad:</string>
    <string name="label_hoy">Hoy</string>
    <string name="label_comparativo">Comparativo Semanal</string>
    <string name="label_desde_graph">Desde %s</string>
    <string name="label_empty_agenda">No hay visitas programadas para hoy</string>
    <string name="action_cambiar_contacto">Cambiar Contacto</string>
    <string name="action_suspender_agenda">Solicitud de Anulación</string>
    <string name="action_observaciones">Observaciones</string>
    <string name="label_tipo_persona">Tipo de Persona</string>
    <string name="label_primer_nombre">Primer Nombre</string>
    <string name="label_segundo_nombre">Segundo Nombre</string>
    <string name="label_primer_apellido">Primer Apellido</string>
    <string name="label_segundo_apellido">Segundo Apellido</string>
    <string name="label_tipo_identificacion">Tipo Identificación</string>
    <string name="label_identificacion">Identificación</string>
    <string name="label_genero">Género</string>
    <string name="label_tipo_cliente">Tipo de Cliente</string>
    <string name="label_canal">Canal</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_razon_social">Razón Social</string>
    <string name="label_pagina_web">Página Web</string>
    <string name="label_actividad_economica">Actividad Económica</string>
    <string name="label_agregar_direccion">Añadir Dirección</string>
    <string name="label_tipo_direccion">Tipo Dirección</string>
    <string name="label_es_principal">Es Dirección Principal</string>
    <string name="label_obtener_ubicacion">Ubicación</string>
    <string name="label_latitud">Latitud</string>
    <string name="label_longitud">Longitud</string>
    <string name="label_agregar_contacto">Añadir contacto del cliente</string>
    <string name="label_cargo">Cargo</string>
    <string name="label_nombres">Nombres</string>
    <string name="label_apellidos">Apellidos</string>
    <string name="action_crear_cliente">Crear Cliente</string>
    <string name="label_eliminar_direccion">Eliminar</string>
    <string name="label_eliminar_contacto">Eliminar</string>
    <string name="label_grabar">Grabar</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_action_motivos_no_visita">Marcar Como No Venta</string>
    <string name="label_sin_observaciones">(Sin Observaciones)</string>
    <string name="label_motivo_no_visita">Motivo De No Venta</string>
    <string name="label_agente">Agentes</string>
    <string name="label_asignar_imagen">Asignar Imagen</string>
    <string name="label_numero">Número</string>
    <string name="title_option_resumen">Resumen</string>
    <string name="label_olvidar_contrasena">¿Olvidó su contraseña?</string>
    <string name="label_agregue_observacion">Agregue una observación</string>
    <string name="label_sin_tareas">No tiene tareas asignadas</string>
    <string name="label_inicio_server">Antes de empezar, escoja el servidor.</string>
    <string name="label_demo">¡Gracias por utilizar Market Force!</string>
    <string name="label_ingreso_server">Tengo un código de licencia</string>
    <string name="warning_modificar_contacto_no_visitada">No puede modificar o asignar un contacto, a una agenda no venta.</string>
    <string name="warning_seleccionar_agenda">Debe seleccionar una agenda</string>
    <string name="warning_seleccionar_cliente">Debe seleccionar un cliente</string>
    <string name="warning_gestionar_agenda">La agenda debe de tener el estado Gestionando para poder modificarla.</string>
    <string name="warning_gestionar_otra_agenda">No puede gestionar esta agenda, si existe otra abierta con estado "Gestionando".</string>
    <string name="warning_gestion_agenda_otro_dia">No puede gestionar una agenda que no sea del día de hoy.</string>
    <string name="label_agente_cargo">Agente</string>
    <string name="label_supervisor">Supervisor</string>
    <string name="label_administrador">Administrador</string>
    <string name="label_codigo_server">Código del Servidor</string>
    <string name="label_crear_visita_datos">Crear Visita</string>
    <string name="label_texto_presentacion">Escoja su tipo de licencia</string>
    <string name="label_button_demo">No tengo licencia, utilizar DEMO</string>
    <string name="label_ingrese_codigo">Ingrese el código</string>
    <string name="label"></string>
    <string name="label_menu_importar_contactos">Importar Contactos</string>
    <string name="label_escoger_origen">Escoja de donde desea importar los contactos:</string>
    <string name="label_contactos_dispositivo">Contactos del dispositivo</string>
    <string name="label_skype">Skype</string>
    <string name="label_linkedin">LinkedIn</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_seleccionar_todos">Seleccionar todos</string>
    <string name="label_fecha">Fecha:</string>
    <string name="label_duracion">Duración:</string>
    <string name="label_tiempo_viaje">Tiempo de Viaje:</string>
    <string name="label_motivo">Motivo:</string>
    <string name="message_solo_vista_tarea">Para realizar esta tarea, primero inicie la gestión.</string>
    <string name="message_crear_visita">Desea crear una próxima visita a este cliente?</string>
    <string name="message_direccion_google">Desea obtener la dirección desde Google?</string>
    <string name="message_server_connection">Hubo un error de conexión al servidor. Desea reintentar?</string>
    <string name="message_cerrar_sesion">Esta seguro de cerrar sesión en este dispositivo?</string>
    <string name="message_ingreso_titulo">Debe de ingresar el titulo de la notificación</string>
    <string name="message_ingreso_mensaje">Debe de ingresar el mensaje de la notificación</string>
    <string name="message_notificacion_enviada">Notificación enviada.</string>
    <string name="message_info">MARKET FORCE® Android </string>
    <string name="message_server_connection_reintentar">Hubo un error de conexión al servidor. Desea reintentar? Si escoje no, se ingresará en modo offline.</string>
    <string name="label_sin_especificar">(Sin especificar)</string>
    <string name="hint_escriba_aqui">Escriba aquí</string>
    <string name="label_ir_agenda">Ver Todas Las Agendas</string>
    <string name="label_total_visitas">Total de Visitas</string>
    <string name="label_visitas_no_realizadas">Visitas No Realizadas</string>
    <string name="label_efectividad_semana">Efectividad</string>
    <string name="title_direccion">Dirección</string>
    <string name="label_esta_semana">Esta Semana</string>
    <string name="label_ult_semana">Ult. Semana</string>
    <string name="label_cliente_2">Cliente:</string>
    <string name="label_correo_2">Correo:</string>
    <string name="label_descripción">Descripción</string>
    <string name="label_valor_unitario">V. Unitario</string>
    <string name="label_valor_total">Total</string>
    <string name="label_cantidad_items"># de Items:</string>
    <string name="label_total_pedido">Total:</string>
    <string name="label_agregar_producto">+ Agregar Producto</string>
    <string name="label_valor">Valor:</string>
</resources>