<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
    
      <item android:id="@+id/action_search_ruta"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"       
          android:actionViewClass="android.widget.SearchView"   
          android:showAsAction="always|collapseActionView"          
          />
      <item android:id="@+id/action_crear_visita" android:icon="@drawable/ic_action_new" android:title="@string/label_crear_visita"
          android:showAsAction="always|collapseActionView"     ></item>
      <item android:id="@+id/action_ver_ruta" android:title="@string/label_menu_ver_rutas"></item>
      <item android:id="@+id/action_ver_posicion" android:title="@string/label_menu_ver_posicion"></item>
      <item android:id="@+id/action_como_llegar" android:title="@string/label_menu_como_llegar">
      </item>
</menu>
