<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/import_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_escoger_origen"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_text_sky_blue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/import_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <RadioButton
                android:id="@+id/import_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_contactos_dispositivo" />

            <RadioButton
                android:id="@+id/import_skype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_skype"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/import_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_linkedin"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/import_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gmail"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/import_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_facebook"
                android:visibility="gone" />
        </RadioGroup>

    </LinearLayout>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp" >

        <Button
            android:id="@+id/obs_cancelar"
            style="@style/Widget.Button.Theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/label_button_cancelar_act" />

        <Button
            android:id="@+id/obs_aceptar"
            style="@style/Widget.Button.Theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_button_aceptar_act" />
    </LinearLayout>

</LinearLayout>
