<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_cliente_2"
            android:id="@+id/textView52"
            android:layout_weight="0.25"
            android:textColor="@color/color_text_sky_blue"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/pedido_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_search_transaction"
            android:textSize="@dimen/text_input_size"
            android:layout_weight="0.75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_correo_2"
            android:id="@+id/textView55"
            android:layout_weight="0.25"
            android:textColor="@color/color_text_sky_blue"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/pedido_email"
            android:layout_weight="0.75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_descripción"
            android:id="@+id/textView56"
            android:layout_weight="0.5"
            android:textColor="@color/color_text_sky_blue"
            android:textStyle="bold"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_valor_unitario"
            android:id="@+id/textView78"
            android:layout_weight="0.25"
            android:textColor="@color/color_text_sky_blue"
            android:textStyle="bold"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_valor_total"
            android:id="@+id/textView79"
            android:layout_weight="0.25"
            android:textColor="@color/color_text_sky_blue"
            android:textStyle="bold"
            android:textSize="@dimen/text_small_size" />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/pedido_detalles"
        android:layout_weight="1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_agregar_producto"
        android:id="@+id/pedido_agregar_producto"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.Button.Theme"
        android:layout_margin="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_cantidad_items"
            android:id="@+id/textView80"
            android:layout_weight="0.75"
            android:textColor="@color/color_text_sky_blue"
            android:textStyle="bold"
            android:gravity="right"
            android:paddingRight="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/pedido_cantidad"
            android:layout_weight="0.25"
            android:textSize="@dimen/text_medium_small_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_total_pedido"
            android:id="@+id/textView82"
            android:layout_weight="0.75"
            android:textColor="@color/color_text_sky_blue"
            android:textStyle="bold"
            android:gravity="right"
            android:paddingRight="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="$ 0.00"
            android:id="@+id/pedido_total"
            android:layout_weight="0.25"
            android:textSize="@dimen/text_medium_small_size" />
    </LinearLayout>

</LinearLayout>