<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:singleLine="true"
       		android:ellipsize="end"
       		android:textColor="@color/bg_button_bg_main"
            android:textStyle="bold" 
       		android:layout_gravity="center_vertical"
            android:text="@string/label_direccion" />

        <EditText
            android:id="@+id/editText_direccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:hint="@string/test_null"
            android:singleLine="false"
            android:ems="10"/>


    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:singleLine="true"
       		android:ellipsize="end"
       		android:textColor="@color/bg_button_bg_main"
            android:textStyle="bold" 
       		android:layout_gravity="center_vertical"
            android:text="@string/label_telefono_1" />

        <EditText
            android:id="@+id/editText_telefono1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:hint="@string/test_null"
            android:singleLine="true"
            android:ems="10"/>


    </LinearLayout>
    
        
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:singleLine="true"
       		android:ellipsize="end"
       		android:textColor="@color/bg_button_bg_main"
            android:textStyle="bold" 
       		android:layout_gravity="center_vertical"
            android:text="@string/label_telefono_2" />

        <EditText
            android:id="@+id/editText_telefono2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:hint="@string/test_null"
            android:singleLine="true"
            android:ems="10"/>


    </LinearLayout>
    
         
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:singleLine="true"
       		android:ellipsize="end"
       		android:textColor="@color/bg_button_bg_main"
            android:textStyle="bold" 
       		android:layout_gravity="center_vertical"
            android:text="@string/label_referencia" />

        <EditText
            android:id="@+id/editText_referencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:hint="@string/test_null"            
            android:ems="10"/>


    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" 
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:singleLine="true"
       		android:ellipsize="end"
       		android:textColor="@color/bg_button_bg_main"
            android:textStyle="bold" 
       		android:layout_gravity="center_vertical"
            android:text="@string/label_geo_posicion" />

        <TextView
            android:id="@+id/textView_pos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            />
	
        <ImageButton
            android:id="@+id/imageButton_get_Localitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_location_found"
            />
    </LinearLayout>

</LinearLayout>
