<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView126"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_fecha"
                android:textStyle="bold"
                android:textColor="@color/color_text_sky_blue"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/control_fecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_fecha"
                android:textStyle="bold"
                android:textColor="@color/color_text_sky_blue"
                android:layout_weight="0.7" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView126aa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_valor"
                android:textStyle="bold"
                android:textColor="@color/color_text_sky_blue"
                android:layout_weight="0.3" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/control_valor"
                android:layout_weight="0.7" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:minHeight="52dp">

            <Button
                android:id="@+id/actividad_cancelar"
                style="@style/Widget.Button.Theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelarCambios"
                android:text="@string/label_button_cancelar_act" />

            <Button
                android:id="@+id/actividad_aceptar"
                style="@style/Widget.Button.Theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:onClick="aceptarCambios"
                android:text="@string/label_button_aceptar_act" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>